fix: update logo path and location for mod list display

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version="${mod_version}"
 displayName="AuthShield"
 # updateJSONURL="https://change.me.example.invalid/updates.json"
 # displayURL="https://change.me.to.your.mods.homepage.example.invalid/"
-logoFile="logo.png"
+logoFile="assets/authshield/textures/icon.png"
 credits="感谢所有为本项目提供支持和反馈的用户！"
 authors="xmk2333"
 description='''${mod_description}'''
