优化逻辑，优化语言文件加载

--- a/src/main/resources/config/authshield/config.json
+++ b/src/main/resources/config/authshield/config.json
@@ -53,6 +53,13 @@
       "enabled": true,
       "interval": 40,
       "text": "authshield.actionbar"
+    },
+    "texts": {
+      "register": "authshield.register",
+      "success": "authshield.login.success",
+      "already": "authshield.login.already",
+      "incorrect": "authshield.login.incorrect",
+      "timeout": "authshield.login.timeout"
     }
   }
 } 
