--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,9 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx2G
+org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
-org.gradle.java.home=L:\\jdk17
 ## Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
