Remove optional overlay translation entries

--- a/config/authshield/config.json
+++ b/config/authshield/config.json
@@ -1,4 +1,9 @@
 {
+  "settings": {
+    "language": "en_us",
+    "debug": false,
+    "optional_registration": false
+  },
   "messages": {
     "title": {
       "enabled": true,
