--- a/src/main/resources/config/authshield/config.json
+++ b/src/main/resources/config/authshield/config.json
@@ -1,7 +1,8 @@
 {
   "settings": {
     "language": "en_us",
-    "debug": false
+    "debug": false,
+    "optional_registration": false
   },
   "login": {
     "timeout": {
